--- a/index3.html
+++ b/index3.html
@@ -231,9 +231,8 @@
   </style>
 </head>
 <body>
-  <div id="music-tip" class="music-tip">
-  请点击任意处以体验完整背景音乐<br>
-  <span style="font-size:0.98em;color:#aaa;">Please tap anywhere to enable background music.</span>
+  <div id="music-tip" class="music-tip"
+  <span style="font-size:0.98em;color:#aaa;"> Please click anywhere to enable background music </span>
 </div>
   <div class="navbar">Experimental Material B for Survey</div>
   <div class="container">
