--- a/index2.html
+++ b/index2.html
@@ -239,7 +239,10 @@
     <span class="title-main">Simulation of Cross-Cultural Sensory Stimulation and Online Shopping Experiences:</span>
     <span class="title-sub">Page and Music Sensory Stimulation</span>
     <p>
-      Thank you for participating in this questionnaire. This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping. Please carefully browse the page and listen to the music, then answer the questionnaire based on your true experience. This page is for academic research purposes only, and all data will be kept strictly confidential.
+      Thank you for participating in this questionnaire. 
+      This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping. 
+      Please carefully browse the page and listen to the music, then answer the questionnaire based on your true experience. 
+      This page is for academic research purposes only, and all data will be kept strictly confidential.
     </p>
     <div class="product-list">
       <div class="product-card">
