--- a/index2.html
+++ b/index2.html
@@ -240,9 +240,9 @@
     <span class="title-sub">Page and Music Sensory Stimulation</span>
     <p>
       Thank you for participating in this questionnaire. 
-      This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping. 
-      Please carefully browse the page and listen to the music, then answer the questionnaire based on your true experience. 
-      This page is for academic research purposes only, and all data will be kept strictly confidential.
+      This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping. </span>
+      Please carefully browse the page and listen to the music, then answer the questionnaire based on your true experience. </span>
+      This page is for academic research purposes only, and all data will be kept strictly confidential.</span>
     </p>
     <div class="product-list">
       <div class="product-card">
