--- a/index3.html
+++ b/index3.html
@@ -231,7 +231,7 @@
   .survey-desc {
   margin: 0 0 26px 0;
   padding-left: 1.6em;
-  color: #a30d13;
+  color: #3b568f;
   font-size: 1.14rem;
   line-height: 1.7;
   font-family: 'Noto Serif SC', serif;
