--- a/index2.html
+++ b/index2.html
@@ -267,7 +267,7 @@
         <div class="product-info">
           <div class="product-title">Product 1</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£99</div>
+          <div class="product-price">¥99</div>
         </div>
         <button class="btn">Buy Now</button>
       </div>
@@ -276,7 +276,7 @@
         <div class="product-info">
           <div class="product-title">Product 2</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£95</div>
+          <div class="product-price">¥95</div>
         </div>
         <button class="btn">Add to Basket</button>
       </div>
@@ -285,7 +285,7 @@
         <div class="product-info">
           <div class="product-title">Product 3</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£18</div>
+          <div class="product-price">¥18</div>
         </div>
         <button class="btn">Buy Now</button>
       </div>
@@ -294,7 +294,7 @@
         <div class="product-info">
           <div class="product-title">Product 4</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£23</div>
+          <div class="product-price">¥23</div>
         </div>
         <button class="btn">Add to Basket</button>
       </div>
@@ -303,7 +303,7 @@
         <div class="product-info">
           <div class="product-title">Product 5</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£105</div>
+          <div class="product-price">¥10.5</div>
         </div>
         <button class="btn">Buy Now</button>
       </div>
@@ -312,7 +312,7 @@
         <div class="product-info">
           <div class="product-title">Product 6</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£805</div>
+          <div class="product-price">¥8.5</div>
         </div>
         <button class="btn">Add to Basket</button>
       </div>
@@ -321,7 +321,7 @@
         <div class="product-info">
           <div class="product-title">Product 7</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£11</div>
+          <div class="product-price">¥11</div>
         </div>
         <button class="btn">Buy Now</button>
       </div>
@@ -330,7 +330,7 @@
         <div class="product-info">
           <div class="product-title">Product 8</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£30</div>
+          <div class="product-price">¥30</div>
         </div>
         <button class="btn">Add to Basket</button>
       </div>
