--- a/index4.html
+++ b/index4.html
@@ -264,7 +264,7 @@
         <div class="product-info">
           <div class="product-title">Product 1</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£99</div>
+          <div class="product-price">$15</div>
         </div>
         <button class="btn">Buy Now</button>
       </div>
@@ -273,7 +273,7 @@
         <div class="product-info">
           <div class="product-title">Product 2</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£95</div>
+          <div class="product-price">$14</div>
         </div>
         <button class="btn">Add to Basket</button>
       </div>
@@ -282,7 +282,7 @@
         <div class="product-info">
           <div class="product-title">Product 3</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£18</div>
+          <div class="product-price">$25</div>
         </div>
         <button class="btn">Buy Now</button>
       </div>
@@ -291,7 +291,7 @@
         <div class="product-info">
           <div class="product-title">Product 4</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£23</div>
+          <div class="product-price">$30</div>
         </div>
         <button class="btn">Add to Basket</button>
       </div>
@@ -300,7 +300,7 @@
         <div class="product-info">
           <div class="product-title">Product 5</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£105</div>
+          <div class="product-price">$14</div>
         </div>
         <button class="btn">Buy Now</button>
       </div>
@@ -309,7 +309,7 @@
         <div class="product-info">
           <div class="product-title">Product 6</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£805</div>
+          <div class="product-price">£12</div>
         </div>
         <button class="btn">Add to Basket</button>
       </div>
@@ -318,7 +318,7 @@
         <div class="product-info">
           <div class="product-title">Product 7</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£11</div>
+          <div class="product-price">$15</div>
         </div>
         <button class="btn">Buy Now</button>
       </div>
@@ -327,7 +327,7 @@
         <div class="product-info">
           <div class="product-title">Product 8</div>
           <div class="product-desc">Product overview…</div>
-          <div class="product-price">£30</div>
+          <div class="product-price">$40</div>
         </div>
         <button class="btn">Add to Basket</button>
       </div>
