--- a/index2.html
+++ b/index2.html
@@ -263,7 +263,9 @@
 </ul>
     <div class="product-list">
       <div class="product-card">
-        <div class="product-img">Img1</div>
+<div class="product-img">
+    <img src="product1.jpg" alt="Product 1" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 1</div>
           <div class="product-desc">Product overview…</div>
@@ -272,7 +274,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img2</div>
+        <div class="product-img">
+    <img src="product2.jpg" alt="Product 2" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 2</div>
           <div class="product-desc">Product overview…</div>
@@ -281,7 +285,9 @@
         <button class="btn">Add to Basket</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img3</div>
+<div class="product-img">
+    <img src="product3.jpg" alt="Product 3" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>        
         <div class="product-info">
           <div class="product-title">Product 3</div>
           <div class="product-desc">Product overview…</div>
@@ -290,7 +296,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img4</div>
+<div class="product-img">
+    <img src="product4.jpg" alt="Product 4" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 4</div>
           <div class="product-desc">Product overview…</div>
@@ -299,7 +307,9 @@
         <button class="btn">Add to Basket</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img5</div>
+<div class="product-img">
+    <img src="product5.jpg" alt="Product 5" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 5</div>
           <div class="product-desc">Product overview…</div>
@@ -308,7 +318,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img6</div>
+<div class="product-img">
+    <img src="product6.jpg" alt="Product 6" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 6</div>
           <div class="product-desc">Product overview…</div>
@@ -317,7 +329,9 @@
         <button class="btn">Add to Basket</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img7</div>
+<div class="product-img">
+    <img src="product7.jpg" alt="Product 7" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 7</div>
           <div class="product-desc">Product overview…</div>
@@ -326,8 +340,10 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img8</div>
-        <div class="product-info">
+<div class="product-img">
+    <img src="product8.jpg" alt="Product 8" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
+                <div class="product-info">
           <div class="product-title">Product 8</div>
           <div class="product-desc">Product overview…</div>
           <div class="product-price">¥300</div>
