--- a/index2.html
+++ b/index2.html
@@ -264,7 +264,7 @@
     <div class="product-list">
       <div class="product-card">
 <div class="product-img">
-    <img src="product1.jpg" alt="Product 1" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product1.jpg" alt="Product 1" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 1</div>
@@ -275,7 +275,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-    <img src="product2.jpg" alt="Product 2" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product2.jpg" alt="Product 2" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 2</div>
@@ -286,7 +286,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="product3.jpg" alt="Product 3" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product3.jpg" alt="Product 3" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>        
         <div class="product-info">
           <div class="product-title">Product 3</div>
@@ -297,7 +297,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="product4.jpg" alt="Product 4" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product4.jpg" alt="Product 4" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 4</div>
@@ -308,7 +308,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="product5.jpg" alt="Product 5" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product5.jpg" alt="Product 5" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 5</div>
@@ -319,7 +319,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="product6.jpg" alt="Product 6" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product6.jpg" alt="Product 6" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 6</div>
@@ -330,7 +330,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="product7.jpg" alt="Product 7" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product7.jpg" alt="Product 7" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 7</div>
@@ -341,7 +341,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="product8.jpg" alt="Product 8" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product8.jpg" alt="Product 8" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
                 <div class="product-info">
           <div class="product-title">Product 8</div>
