--- a/index2.html
+++ b/index2.html
@@ -264,7 +264,7 @@
     <div class="product-list">
       <div class="product-card">
 <div class="product-img">
-    <img src="Product1.JPG" alt="Product 1" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 1</div>
@@ -275,7 +275,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-    <img src="Product2.JPG" alt="Product 2" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 2</div>
@@ -286,7 +286,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="Product3.JPG" alt="Product 3" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>        
         <div class="product-info">
           <div class="product-title">Product 3</div>
@@ -297,7 +297,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="Product4.JPG" alt="Product 4" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 4</div>
@@ -308,7 +308,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="Product5.JPG" alt="Product 5" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 5</div>
@@ -319,7 +319,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="Product6.JPG" alt="Product 6" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 6</div>
@@ -330,7 +330,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="Product7.JPG" alt="Product 7" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
           <div class="product-title">Product 7</div>
@@ -341,7 +341,7 @@
       </div>
       <div class="product-card">
 <div class="product-img">
-    <img src="Product8.JPG" alt="Product 8" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+    <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
                 <div class="product-info">
           <div class="product-title">Product 8</div>
@@ -384,6 +384,21 @@ document.addEventListener('DOMContentLoaded', function() {
   }
   document.body.addEventListener('click', playBGM, { once: true });
 });
+</script>
+<div id="img-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.65); z-index:10000; justify-content:center; align-items:center;">
+  <img id="modal-img" src="" style="max-width:80vw; max-height:80vh; border-radius:16px; box-shadow:0 0 40px #0008;">
+</div>
+  <script>
+document.querySelectorAll('.enlarge-img').forEach(img => {
+  img.style.cursor = 'zoom-in';
+  img.onclick = () => {
+    document.getElementById('modal-img').src = img.src;
+    document.getElementById('img-modal').style.display = 'flex';
+  };
+});
+document.getElementById('img-modal').onclick = function(e) {
+  if (e.target === this) this.style.display = 'none';
+};
 </script>
 </body>
 </html>
