--- a/index3.html
+++ b/index3.html
@@ -263,7 +263,9 @@
 </ul>
     <div class="product-list">
       <div class="product-card">
-        <div class="product-img">Img1</div>
+<div class="product-img">
+    <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 1</div>
           <div class="product-desc">Product overview…</div>
@@ -272,7 +274,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img2</div>
+<div class="product-img">
+    <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 2</div>
           <div class="product-desc">Product overview…</div>
@@ -281,7 +285,9 @@
         <button class="btn">Add to Basket</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img3</div>
+<div class="product-img">
+    <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 3</div>
           <div class="product-desc">Product overview…</div>
@@ -290,7 +296,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img4</div>
+<div class="product-img">
+    <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 4</div>
           <div class="product-desc">Product overview…</div>
@@ -299,7 +307,9 @@
         <button class="btn">Add to Basket</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img5</div>
+<div class="product-img">
+    <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 5</div>
           <div class="product-desc">Product overview…</div>
@@ -308,7 +318,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img6</div>
+<div class="product-img">
+    <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 6</div>
           <div class="product-desc">Product overview…</div>
@@ -317,7 +329,9 @@
         <button class="btn">Add to Basket</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img7</div>
+<div class="product-img">
+    <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 7</div>
           <div class="product-desc">Product overview…</div>
@@ -326,7 +340,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img8</div>
+<div class="product-img">
+    <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 8</div>
           <div class="product-desc">Product overview…</div>
@@ -368,6 +384,22 @@ document.addEventListener('DOMContentLoaded', function() {
   }
   document.body.addEventListener('click', playBGM, { once: true });
 });
+</script>
+  </script>
+<div id="img-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.65); z-index:10000; justify-content:center; align-items:center;">
+  <img id="modal-img" src="" style="max-width:80vw; max-height:80vh; border-radius:16px; box-shadow:0 0 40px #0008;">
+</div>
+  <script>
+document.querySelectorAll('.enlarge-img').forEach(img => {
+  img.style.cursor = 'zoom-in';
+  img.onclick = () => {
+    document.getElementById('modal-img').src = img.src;
+    document.getElementById('img-modal').style.display = 'flex';
+  };
+});
+document.getElementById('img-modal').onclick = function(e) {
+  if (e.target === this) this.style.display = 'none';
+};
 </script>
 </body>
 </html>
