--- a/index4.html
+++ b/index4.html
@@ -260,7 +260,9 @@
 </ul>
     <div class="product-list">
       <div class="product-card">
-        <div class="product-img">Img1</div>
+<div class="product-img">
+    <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 1</div>
           <div class="product-desc">Product overview…</div>
@@ -269,7 +271,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img2</div>
+<div class="product-img">
+    <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 2</div>
           <div class="product-desc">Product overview…</div>
@@ -278,7 +282,9 @@
         <button class="btn">Add to Basket</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img3</div>
+<div class="product-img">
+    <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 3</div>
           <div class="product-desc">Product overview…</div>
@@ -287,7 +293,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img4</div>
+<div class="product-img">
+    <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 4</div>
           <div class="product-desc">Product overview…</div>
@@ -296,7 +304,9 @@
         <button class="btn">Add to Basket</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img5</div>
+<div class="product-img">
+    <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 5</div>
           <div class="product-desc">Product overview…</div>
@@ -305,7 +315,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img6</div>
+<div class="product-img">
+    <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 6</div>
           <div class="product-desc">Product overview…</div>
@@ -314,7 +326,9 @@
         <button class="btn">Add to Basket</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img7</div>
+<div class="product-img">
+    <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 7</div>
           <div class="product-desc">Product overview…</div>
@@ -323,7 +337,9 @@
         <button class="btn">Buy Now</button>
       </div>
       <div class="product-card">
-        <div class="product-img">Img8</div>
+<div class="product-img">
+    <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
+  </div>
         <div class="product-info">
           <div class="product-title">Product 8</div>
           <div class="product-desc">Product overview…</div>
@@ -365,6 +381,21 @@ document.addEventListener('DOMContentLoaded', function() {
   }
   document.body.addEventListener('click', playBGM, { once: true });
 });
+</script>
+  <div id="img-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.65); z-index:10000; justify-content:center; align-items:center;">
+  <img id="modal-img" src="" style="max-width:80vw; max-height:80vh; border-radius:16px; box-shadow:0 0 40px #0008;">
+</div>
+  <script>
+document.querySelectorAll('.enlarge-img').forEach(img => {
+  img.style.cursor = 'zoom-in';
+  img.onclick = () => {
+    document.getElementById('modal-img').src = img.src;
+    document.getElementById('img-modal').style.display = 'flex';
+  };
+});
+document.getElementById('img-modal').onclick = function(e) {
+  if (e.target === this) this.style.display = 'none';
+};
 </script>
 </body>
 </html>
