--- a/index2.html
+++ b/index2.html
@@ -267,8 +267,8 @@
     <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
-          <div class="product-title">Product 1</div>
-          <div class="product-desc">Product overview…</div>
+          <div class="product-title">Misty Hills Tote Bag</div>
+          <div class="product-desc">Morning mountains and lake light, carry the natural tenderness along with the travelling.</div>
           <div class="product-price">¥99</div>
         </div>
         <button class="btn">Buy Now</button>
@@ -278,8 +278,8 @@
     <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
-          <div class="product-title">Product 2</div>
-          <div class="product-desc">Product overview…</div>
+          <div class="product-title">Swan Reflection Eyeglasses Cloth</div>
+          <div class="product-desc">Swan and water reflection to brighten up a little daily cleaning.</div>
           <div class="product-price">¥95</div>
         </div>
         <button class="btn">Add to Basket</button>
@@ -289,8 +289,8 @@
     <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>        
         <div class="product-info">
-          <div class="product-title">Product 3</div>
-          <div class="product-desc">Product overview…</div>
+          <div class="product-title">Lighthouse Coast Drawstring Pouch</div>
+          <div class="product-desc">Coastal lighthouses and roads to organise your travel bits and pieces.</div>
           <div class="product-price">¥180</div>
         </div>
         <button class="btn">Buy Now</button>
@@ -300,8 +300,8 @@
     <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
-          <div class="product-title">Product 4</div>
-          <div class="product-desc">Product overview…</div>
+          <div class="product-title">Ripple Light Floor Mat</div>
+          <div class="product-desc">Capture the moment the sunlight glints off the water and add a refreshing touch to your living space.</div>
           <div class="product-price">¥230</div>
         </div>
         <button class="btn">Add to Basket</button>
@@ -311,8 +311,8 @@
     <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
-          <div class="product-title">Product 5</div>
-          <div class="product-desc">Product overview…</div>
+          <div class="product-title">Pasture Memory Glass Frame/div>
+          <div class="product-desc">Freeze time in the pasture and the shadows of the trees.</div>
           <div class="product-price">¥105</div>
         </div>
         <button class="btn">Buy Now</button>
@@ -322,8 +322,8 @@
     <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
-          <div class="product-title">Product 6</div>
-          <div class="product-desc">Product overview…</div>
+          <div class="product-title">Nature Moments Film Bookmark</div>
+          <div class="product-desc">Designed to mimic video film, recording three natural impressions full of storytelling at the same time.</div>
           <div class="product-price">¥85</div>
         </div>
         <button class="btn">Add to Basket</button>
@@ -333,8 +333,8 @@
     <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
-          <div class="product-title">Product 7</div>
-          <div class="product-desc">Product overview…</div>
+          <div class="product-title">Landscape Journey Commemorative Coin</div>
+          <div class="product-desc">Printed on both sides with nature scenes to memorise the unique impression of this journey.</div>
           <div class="product-price">¥110</div>
         </div>
         <button class="btn">Buy Now</button>
@@ -344,8 +344,8 @@
     <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
                 <div class="product-info">
-          <div class="product-title">Product 8</div>
-          <div class="product-desc">Product overview…</div>
+          <div class="product-title">Verdant Pastures Blanket</div>
+          <div class="product-desc">Surrounded by greenery, enjoy your own time at rest.</div>
           <div class="product-price">¥300</div>
         </div>
         <button class="btn">Add to Basket</button>
