--- a/index2.html
+++ b/index2.html
@@ -87,7 +87,7 @@
     }
     .product-card {
       flex: 1 1 420px;
-      max-width: 440px;
+      max-width: 500px;
       min-width: 295px;
       background: #fff6f0ee;
       border-radius: 16px;
@@ -133,18 +133,18 @@
       font-size: 1.13rem;
       margin-bottom: 4px;
       font-family: 'Noto Serif SC', serif;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      white-space: normal;
+  overflow: visible;
+  text-overflow: initial;
     }
     .product-desc {
       font-size: 0.99rem;
       color: #77411c;
       margin-bottom: 6px;
       font-family: 'Noto Serif SC', serif;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    white-space: normal;
+  overflow: visible;
+  text-overflow: initial;
     }
     .product-price {
       color: #cead4c;
@@ -167,7 +167,7 @@
       cursor: pointer;
       box-shadow: 0 2px 8px #b67d2f33;
       transition: background .3s;
-      white-space: nowrap;
+      white-space: normal;
     }
     .btn:hover {
       background: linear-gradient(90deg, #e74a2f, #cead4c 100%);
@@ -311,7 +311,7 @@
     <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
-          <div class="product-title">Pasture Memory Glass Frame/div>
+          <div class="product-title">Pasture Memory Glass Frame</div>
           <div class="product-desc">Freeze time in the pasture and the shadows of the trees.</div>
           <div class="product-price">¥105</div>
         </div>
