--- a/index2.html
+++ b/index2.html
@@ -156,7 +156,7 @@
     .btn {
       display: inline-block;
       margin-left: 20px;
-      margin-left: 18px;
+      margin-top: 18px;
       padding: 9px 22px;
       background: linear-gradient(90deg, #cead4c 60%, #e74a2f 100%);
       color: #fff;
