--- a/index2.html
+++ b/index2.html
@@ -279,7 +279,7 @@
     <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
-          <div class="product-title">Swan Reflection Eyeglasses Cloth</div>
+          <div class="product-title">Swan Reflection Glasses Cloth</div>
           <div class="product-desc">Swan and water reflection to brighten up a little daily cleaning.</div>
           <div class="product-price">¥95</div>
           <button class="btn">Add to Basket</button>
@@ -290,7 +290,7 @@
     <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>        
         <div class="product-info">
-          <div class="product-title">Lighthouse Coast Drawstring Pouch</div>
+          <div class="product-title">Lighthouse Drawstring Pouch</div>
           <div class="product-desc">Coastal lighthouses and roads to organise your travel bits and pieces.</div>
           <div class="product-price">¥180</div>
           <button class="btn">Buy Now</button>
@@ -323,7 +323,7 @@
     <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
   </div>
         <div class="product-info">
-          <div class="product-title">Nature Moments Film Bookmark</div>
+          <div class="product-title">Nature Moments Bookmark</div>
           <div class="product-desc">Designed to mimic video film, recording three natural impressions full of storytelling at the same time.</div>
           <div class="product-price">¥85</div>
           <button class="btn">Add to Basket</button>
