--- a/index3.html
+++ b/index3.html
@@ -270,7 +270,7 @@
         <div class="product-info">
           <div class="product-title">Misty Hills Tote Bag</div>
           <div class="product-desc">Morning mountains and lake light, carry the natural tenderness along with the travelling.</div>
-          <div class="product-price">¥99</div>
+          <div class="product-price">£9.9</div>
           <button class="btn">Buy Now</button>
         </div>
       </div>
@@ -281,7 +281,7 @@
         <div class="product-info">
           <div class="product-title">Swan Reflection Glasses Cloth</div>
           <div class="product-desc">Swan and water reflection to brighten up a little daily cleaning.</div>
-          <div class="product-price">¥95</div>
+          <div class="product-price">£9.5</div>
           <button class="btn">Add to Basket</button>
         </div>
       </div>
@@ -292,7 +292,7 @@
         <div class="product-info">
           <div class="product-title">Lighthouse Drawstring Pouch</div>
           <div class="product-desc">Coastal lighthouses and roads to organise your travel bits and pieces.</div>
-          <div class="product-price">¥180</div>
+          <div class="product-price">£18</div>
           <button class="btn">Buy Now</button>
         </div>
       </div>
@@ -303,7 +303,7 @@
         <div class="product-info">
           <div class="product-title">Ripple Light Floor Mat</div>
           <div class="product-desc">Capture the moment the sunlight glints off the water and add a refreshing touch to your living space.</div>
-          <div class="product-price">¥230</div>
+          <div class="product-price">£23</div>
           <button class="btn">Add to Basket</button>
         </div>
       </div>
@@ -314,7 +314,7 @@
         <div class="product-info">
           <div class="product-title">Pasture Memory Glass Frame</div>
           <div class="product-desc">Freeze time in the pasture and the shadows of the trees.</div>
-          <div class="product-price">¥105</div>
+          <div class="product-price">£10.5</div>
           <button class="btn">Buy Now</button>
         </div>
       </div>
@@ -325,7 +325,7 @@
         <div class="product-info">
           <div class="product-title">Nature Moments Bookmark</div>
           <div class="product-desc">Designed to mimic video film, recording three natural impressions full of storytelling at the same time.</div>
-          <div class="product-price">¥85</div>
+          <div class="product-price">£8.5</div>
           <button class="btn">Add to Basket</button>
         </div>
       </div>
@@ -336,7 +336,7 @@
         <div class="product-info">
           <div class="product-title">Landscape Journey Commemorative Coin</div>
           <div class="product-desc">Printed on both sides with nature scenes to memorise the unique impression of this journey.</div>
-          <div class="product-price">¥110</div>
+          <div class="product-price">£11</div>
           <button class="btn">Buy Now</button>
         </div>
       </div>
@@ -347,7 +347,7 @@
                 <div class="product-info">
           <div class="product-title">Verdant Pastures Blanket</div>
           <div class="product-desc">Surrounded by greenery, enjoy your own time at rest.</div>
-          <div class="product-price">¥300</div>
+          <div class="product-price">£30</div>
           <button class="btn">Add to Basket</button>
         </div>
       </div>
