--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </div>
         <div class="product-info">
           <div class="product-title">天鹅水影眼镜布</div>
-          <div class="product-desc">天鹅与水面倒影，为日常清洁添一抹灵动。</div>
+          <div class="product-desc">天鹅与水面倒影，为日常添一抹灵动。</div>
           <div class="product-price">¥95</div>
           <button class="btn">加入购物篮</button>
         </div>
@@ -302,7 +302,7 @@
         </div>
         <div class="product-info">
           <div class="product-title">涟漪之光地垫</div>
-          <div class="product-desc">捕捉阳光点点波光，为空间增添一抹清新。</div>
+          <div class="product-desc">捕捉阳光点点波光，为空间加一丝清新。</div>
           <div class="product-price">¥230</div>
           <button class="btn">加入购物篮</button>
         </div>
