--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   <div id="music-tip" class="music-tip">
     <span style="font-size:0.98em;color:#aaa;">请点击任意位置以开启背景音乐。</span>
   </div>
-  <div class="navbar">调查问卷实验材料 A</div>
+  <div class="navbar">调查问卷实验材料</div>
   <div class="container">
     <span class="title-main">跨文化感官刺激与在线购物体验模拟</span>
     <span class="title-sub">网页与音乐感官刺激</span>
