--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
   <div class="navbar">调查问卷实验材料 A</div>
   <div class="container">
     <span class="title-main">跨文化感官刺激与在线购物体验模拟</span>
-    <span class="title-sub">网页与音乐感官刺激</span>
+    <span class="title-sub">视觉与音乐感官刺激</span>
     <ul class="survey-desc">
       <li>感谢您参与本问卷！</li>
       <li>本页面为模拟在线购物网页，配有背景音乐，旨在研究不同感官元素对用户情感参与及满意度的影响。</li>
