--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simulation of Cross-Cultural Sensory Stimulation and Online Shopping Experiences: Page and Music Sensory Stimulation</title>
+  <title>Simulation of Cross-Cultural Sensory Stimulation and Online Shopping Experiences: Visual and Music Sensory Stimulation</title>
   <!-- Fonts and APlayer, MetingJS dependencies -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@700&family=Montserrat:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
