--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         </div>
       </div>
     </div>
-    <button class="more-btn">查看更多商品</button>
+    <button class="more-btn">请进入下一部分，继续完成问卷</button>
   </div>
   <!-- NetEase Music BGM Player -->
   <meting-js
