--- a/index3.html
+++ b/index3.html
@@ -352,7 +352,7 @@
         </div>
       </div>
     </div>
-    <button class="more-btn">View More Products</button>
+    <button class="more-btn">Please click on the next section to continue completing the questionnaire</button>
   </div>
   <!-- NetEase Music BGM Player -->
   <meting-js
