--- a/index5.html
+++ b/index5.html
@@ -256,9 +256,9 @@
     <span class="title-sub">页面与音乐感官刺激</span>
     <ul class="survey-desc">
   <li>感谢您参与本次问卷！</li>
-  <li>本页面为模拟网络购物网站，并配有背景音乐，旨在研究不同感官元素如何影响用户在网络购物过程中的情感投入与满意度。</li>
-  <li>本页面仅用于学术研究，所有数据都将严格保密。</li>
-  <li>请认真浏览页面并聆听音乐，随后根据您的真实体验完成问卷。</li>
+  <li>本页面为模拟在线购物网页，配有背景音乐，旨在研究不同感官元素对用户情感参与及满意度的影响。</li>
+  <li>本页面仅用于学术研究，所有数据均严格保密。</li>
+  <li>请您认真浏览页面并聆听音乐，根据您的真实体验完成问卷。</li>
 </ul>
     <div class="product-list">
       <div class="product-card">
@@ -266,8 +266,8 @@
           <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">云雾山丘手提袋</div>
-          <div class="product-desc">晨曦山湖的光影，把大自然的柔美随行携带。</div>
+          <div class="product-title">晨雾山影帆布袋</div>
+          <div class="product-desc">晨曦山色与湖光，随行携带自然温柔。</div>
           <div class="product-price">£9.90</div>
           <button class="btn">立即购买</button>
         </div>
@@ -277,8 +277,8 @@
           <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">天鹅倒影眼镜布</div>
-          <div class="product-desc">天鹅与水面倒影，让日常清洁更添光彩。</div>
+          <div class="product-title">天鹅水影眼镜布</div>
+          <div class="product-desc">天鹅与水面倒影，让日常添一抹灵动。</div>
           <div class="product-price">£9.50</div>
           <button class="btn">加入购物篮</button>
         </div>
@@ -288,8 +288,8 @@
           <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
         </div>        
         <div class="product-info">
-          <div class="product-title">灯塔束口收纳袋</div>
-          <div class="product-desc">沿海灯塔与小路，收纳你的旅行小物。</div>
+          <div class="product-title">海岸灯塔收纳束口袋</div>
+          <div class="product-desc">海岸灯塔与公路，收纳你的旅行小物。</div>
           <div class="product-price">£18.00</div>
           <button class="btn">立即购买</button>
         </div>
@@ -299,8 +299,8 @@
           <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">涟漪光影地垫</div>
-          <div class="product-desc">捕捉阳光洒在水面的一瞬，为居家增添清新气息。</div>
+          <div class="product-title">涟漪之光地垫</div>
+          <div class="product-desc">捕捉阳光点点波光，为空间加一丝清新。</div>
           <div class="product-price">£23.00</div>
           <button class="btn">加入购物篮</button>
         </div>
@@ -311,7 +311,7 @@
         </div>
         <div class="product-info">
           <div class="product-title">牧野时光玻璃相框</div>
-          <div class="product-desc">定格牧场与树影间的时光。</div>
+          <div class="product-desc">牧场树影定格，时光温柔流转。</div>
           <div class="product-price">£10.50</div>
           <button class="btn">立即购买</button>
         </div>
@@ -332,7 +332,7 @@
           <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">风景之旅纪念币</div>
+          <div class="product-title">风景双面纪念币</div>
           <div class="product-desc">双面印有自然风景，留存本次旅程的独特记忆。</div>
           <div class="product-price">£11.00</div>
           <button class="btn">立即购买</button>
