--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
           <img src="Product6.JPG" alt="产品6" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">自然印象胶片书签</div>
-          <div class="product-desc">胶片设计，记录三段自然时光的故事。</div>
+          <div class="product-title">自然印象书签</div>
+          <div class="product-desc">灵感源自影像胶片，同时记录三幕充满故事感的自然画面。</div>
           <div class="product-price">¥85</div>
           <button class="btn">加入购物篮</button>
         </div>
@@ -334,8 +334,8 @@
           <img src="Product7.JPG" alt="产品7" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
-          <div class="product-title">风景纪念双面币</div>
-          <div class="product-desc">双面自然风光，纪念每一段独特旅程。</div>
+          <div class="product-title">风景双面纪念币</div>
+          <div class="product-desc">双面印有自然风景，留存本次旅程的独特记忆。</div>
           <div class="product-price">¥110</div>
           <button class="btn">立即购买</button>
         </div>
