--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
           <div class="card-desc">通用组（中文）</div>
         </div>
       </a>
+    <a href="feedback.html">
+  <div class="card">
+    <div class="card-title">意见反馈</div>
+    <div class="card-desc">提交你的建议或遇到的问题</div>
+  </div>
+</a>
     </div>
   </div>
 </body>
