--- a/index2.html
+++ b/index2.html
@@ -352,7 +352,8 @@
         </div>
       </div>
     </div>
-    <button class="more-btn">Please return to the questionnaire and click the next section to continue completing the questionnaire</button>
+    <button class="more-btn">Please return to the questionnaire <br> 
+    Click the next section to continue completing the questionnaire </button>
   </div>
   <!-- NetEase Music BGM Player -->
   <meting-js
