--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,12 @@
   <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
   <style>
+    .center-text {
+  text-align: center !important;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
     body {
       background-color: #f8efe6;
       background-image: url('卷云纹.png');
@@ -352,7 +358,7 @@
         </div>
       </div>
     </div>
-    <div class="survey-desc">
+   <div class="survey-desc center-text">
   Please return to the questionnaire<br>
   Click the next section to continue completing the questionnaire
 </div>
