--- a/index6.html
+++ b/index6.html
@@ -9,6 +9,12 @@
   <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
   <style>
+    .center-text {
+  text-align: center !important;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
     body {
       background-color: #f8efe6;
       background-image: url('卷云纹.png');
@@ -352,8 +358,9 @@
         </div>
       </div>
     </div>
-    <button class="more-btn">请进入下一部分，继续完成问卷</button>
-  </div>
+ <div class="survey-desc center-text">
+  请回到问卷<br>
+  点击下一部分继续填写问卷  </div>
   <!-- NetEase Music BGM Player -->
   <meting-js
     server="netease"
