--- a/index5.html
+++ b/index5.html
@@ -357,7 +357,7 @@
       </div>
     </div>
  <div class="survey-desc center-text">
-  请回答问卷<br>
+  请回到问卷<br>
   点击下一部分继续填写问卷
 </div>
   <!-- NetEase Music BGM Player -->
